--- a/index.html
+++ b/index.html
@@ -1,196 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Renderia Design | Landing Page and Web Dev</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <header class="border-bottom">
-        <nav>
-          <div class="get-in-touch">
-            <ion-icon name="mail-outline"></ion-icon>
-            <a href="mailto:tiago.coderia@gmail.com">Get in Touch</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Renderia Design | Landing Page and Web Dev</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="/media/favicon.png" type="image/x-icon">
+
+</head>
+
+<body>
+  <div class="container">
+    <header class="border-bottom">
+      <nav>
+        <div class="get-in-touch">
+          <ion-icon name="mail-outline"></ion-icon>
+          <a href="mailto:tiago.coderia@gmail.com">Get in Touch</a>
+        </div>
+        <ul class="nav-desktop">
+          <li>
+            <a href="https://www.linkedin.com/in/jonathantiiago/" target="_blank">
+              Linkedin
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/askdot" target="_blank">
+              Behance
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/jonathan.tiiago/" target="_blank">
+              Instagram
+            </a>
+          </li>
+        </ul>
+        <ul class="nav-mobile">
+          <li>
+            <a href="https://www.linkedin.com/in/jonathantiiago/" target="_blank">
+              <ion-icon name="logo-linkedin" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/askdot" target="_blank">
+              <ion-icon name="logo-behance" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/jonathan.tiiago/" target="_blank"><ion-icon name="logo-instagram" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <img src="media/profile.jpg" class="d-block w-100" alt="..." />
+        <div class="hero--name">
+          <p>Hi, I'm Tiago, from Blumenau - Brazil</p>
+          <img src="media/handshaking.svg" />
+        </div>
+        <h1 class="gradient-text">
+          Building Landing Pages <br />and Web Interfaces. <br />Expert in UI
+          & UX!
+        </h1>
+        <a href="" class="btn-primary">Lastes Shots <ion-icon name="add-outline"></ion-icon></a>
+      </section>
+      <section class="proficiency border-bottom pb-4">
+        <div class="cta">
+          <h2 class="gradient-text text-center">
+            Collaborate with brands and agencies<br />
+            to create impactful results.
+          </h2>
+        </div>
+        <div class="cards">
+          <div class="card card-uix">
+            <img src="media/icon-uxui.svg" alt="" />
+            <h5 class="gradient-text">UX & UI</h5>
+            <p>
+              Designing interfaces that are intuitive, efficient, and
+              enjoyable to use.
+            </p>
           </div>
-          <ul class="nav-desktop">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/jonathantiiago/"
-                target="_blank"
-              >
-                Linkedin
-              </a>
-            </li>
-            <li>
-              <a href="https://www.behance.net/askdot" target="_blank">
-                Behance
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.instagram.com/jonathan.tiiago/"
-                target="_blank"
-              >
-                Instagram
-              </a>
-            </li>
-          </ul>
-          <ul class="nav-mobile">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/jonathantiiago/"
-                target="_blank"
-              >
-                <ion-icon name="logo-linkedin" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.behance.net/askdot" target="_blank">
-                <ion-icon name="logo-behance" />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.instagram.com/jonathan.tiiago/"
-                target="_blank"
-                ><ion-icon name="logo-instagram" />
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-        <section class="hero">
-          <img src="media/profile.jpg" class="d-block w-100" alt="..." />
-          <div class="hero--name">
-            <p>Hi, I'm Tiago, from Blumenau - Brazil</p>
-            <img src="media/handshaking.svg" />
+          <div class="card card-webMobile">
+            <img src="media/icon-webmobile.svg" alt="" />
+            <h5 class="gradient-text">Web & Mobile App</h5>
+            <p>
+              Transforming ideas into exceptional web and mobile app
+              experiences.
+            </p>
           </div>
-          <h1 class="gradient-text">
-            Building Landing Pages <br />and Web Interfaces. <br />Expert in UI
-            & UX!
-          </h1>
-          <a href="" class="btn-primary"
-            >Lastes Shots <ion-icon name="add-outline"></ion-icon
-          ></a>
-        </section>
-        <section class="proficiency border-bottom">
-          <div class="cta">
-            <h2 class="gradient-text text-center">
-              Collaborate with brands and agencies<br />
-              to create impactful results.
-            </h2>
+          <div class="card card-design">
+            <img src="media/icon-designcreative.svg" alt="" />
+            <h5 class="gradient-text">Design & Creative</h5>
+            <p>
+              Crafting visually stunning designs that connect with your
+              audience.
+            </p>
           </div>
-          <div class="cards">
-            <div class="card card-uix">
-              <img src="media/icon-uxui.svg" alt="" />
-              <h5 class="gradient-text">UX & UI</h5>
-              <p>
-                Designing interfaces that are intuitive, efficient, and
-                enjoyable to use.
-              </p>
-            </div>
-            <div class="card card-webMobile">
-              <img src="media/icon-webmobile.svg" alt="" />
-              <h5 class="gradient-text">Web & Mobile App</h5>
-              <p>
-                Transforming ideas into exceptional web and mobile app
-                experiences.
-              </p>
-            </div>
-            <div class="card card-design">
-              <img src="media/icon-designcreative.svg" alt="" />
-              <h5 class="gradient-text">Design & Creative</h5>
-              <p>
-                Crafting visually stunning designs that connect with your
-                audience.
-              </p>
-            </div>
-            <div class="card card-development">
-              <img src="media/icon-development.svg" alt="" />
-              <h5 class="gradient-text">Development</h5>
-              <p>
-                Bringing your vision to life with the latest technology and
-                design trends.
-              </p>
+          <div class="card card-development">
+            <img src="media/icon-development.svg" alt="" />
+            <h5 class="gradient-text">Development</h5>
+            <p>
+              Bringing your vision to life with the latest technology and
+              design trends.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="portfolio border-bottom gap-2 flex flex-column">
+        <h1 class="gradient-text text-center">Lastes Projects...</h1>
+        <div class="grid cards-portfolio gap-2 justify-center">
+          <div class="card card-portfolio">
+            <img src="media/lp/tatifashionmkt.jpg" alt="Site Tati Fashion Marketing">
+            <div class="card-portfolio--text p-2 gap-2 flex flex-column">
+              <p>Tati Fashion Marketing</p>
+              <a href="https://tatifashionmkt.com.br" target="_blank" class="btn-primary">Acessar Site</a>
             </div>
           </div>
-        </section>
-        <section class="next-project border-bottom">
-          <h1 class="gradient-text">
-            Tell me about your <br />
-            next project
-          </h1>
-          <a href="mailto:tiago.coderia@gmail.com" class="btn-primary">
-            Get in Touch
-            <ion-icon name="mail-outline" />
-          </a>
-        </section>
-      </main>
-      <footer>
-        <nav>
-          <p>© 2023 All rights reserved.</p>
-          <ul class="nav-desktop">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/jonathantiiago/"
-                target="_blank"
-              >
-                Linkedin
-              </a>
-            </li>
-            <li>
-              <a href="https://www.behance.net/askdot" target="_blank">
-                Behance
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.instagram.com/jonathan.tiiago/"
-                target="_blank"
-              >
-                Instagram
-              </a>
-            </li>
-          </ul>
-          <ul class="nav-mobile">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/jonathantiiago/"
-                target="_blank"
-              >
-                <ion-icon name="logo-linkedin" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.behance.net/askdot" target="_blank">
-                <ion-icon name="logo-behance" />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.instagram.com/jonathan.tiiago/"
-                target="_blank"
-                ><ion-icon name="logo-instagram" />
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </footer>
-    </div>
-    <!-- SCRIPTS -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+          <div class="card card-portfolio">
+            <img src="media/lp/ceigentemiuda.jpg" alt="Site Tati Fashion Marketing">
+            <div class="card-portfolio--text p-2 gap-2 flex flex-column">
+              <p>CEI Gente Miúda</p>
+              <a href="https://ceigentemiuda.com.br" target="_blank" class="btn-primary">Acessar Site</a>
+            </div>
+          </div>
+          <div class="card card-portfolio">
+            <img src="media/lp/clinicaochoa.jpg" alt="Site Tati Fashion Marketing">
+            <div class="card-portfolio--text p-2 gap-2 flex flex-column">
+              <p>Clínica Ochoa</p>
+              <a href="http://clinicaochoa.com.br" target="_blank" class="btn-primary">Acessar Site</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="next-project border-bottom py-4">
+        <h1 class="gradient-text">
+          Tell me about your <br />
+          next project
+        </h1>
+        <a href="mailto:tiago.coderia@gmail.com" class="btn-primary">
+          Get in Touch
+          <ion-icon name="mail-outline" />
+        </a>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <p>© 2023 All rights reserved.</p>
+        <ul class="nav-desktop">
+          <li>
+            <a href="https://www.linkedin.com/in/jonathantiiago/" target="_blank">
+              Linkedin
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/askdot" target="_blank">
+              Behance
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/jonathan.tiiago/" target="_blank">
+              Instagram
+            </a>
+          </li>
+        </ul>
+        <ul class="nav-mobile">
+          <li>
+            <a href="https://www.linkedin.com/in/jonathantiiago/" target="_blank">
+              <ion-icon name="logo-linkedin" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/askdot" target="_blank">
+              <ion-icon name="logo-behance" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/jonathan.tiiago/" target="_blank"><ion-icon name="logo-instagram" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+  </div>
+  <!-- SCRIPTS -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
