--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Renderia Design | Landing Page and Web Dev</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="shortcut icon" href="/media/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="/media/favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -66,7 +67,7 @@
         </h1>
         <a href="" class="btn-primary">Lastes Shots <ion-icon name="add-outline"></ion-icon></a>
       </section>
-      <section class="proficiency border-bottom">
+      <section class="proficiency border-bottom pb-4">
         <div class="cta">
           <h2 class="gradient-text text-center">
             Collaborate with brands and agencies<br />
@@ -108,7 +109,33 @@
           </div>
         </div>
       </section>
-      <section class="next-project border-bottom">
+      <section class="portfolio border-bottom gap-2 flex flex-column">
+        <h1 class="gradient-text text-center">Lastes Projects...</h1>
+        <div class="grid cards-portfolio gap-2 justify-center">
+          <div class="card card-portfolio">
+            <img src="media/lp/tatifashionmkt.jpg" alt="Site Tati Fashion Marketing">
+            <div class="card-portfolio--text p-2 gap-2 flex flex-column">
+              <p>Tati Fashion Marketing</p>
+              <a href="https://tatifashionmkt.com.br" target="_blank" class="btn-primary">Acessar Site</a>
+            </div>
+          </div>
+          <div class="card card-portfolio">
+            <img src="media/lp/ceigentemiuda.jpg" alt="Site Tati Fashion Marketing">
+            <div class="card-portfolio--text p-2 gap-2 flex flex-column">
+              <p>CEI Gente Miúda</p>
+              <a href="https://ceigentemiuda.com.br" target="_blank" class="btn-primary">Acessar Site</a>
+            </div>
+          </div>
+          <div class="card card-portfolio">
+            <img src="media/lp/clinicaochoa.jpg" alt="Site Tati Fashion Marketing">
+            <div class="card-portfolio--text p-2 gap-2 flex flex-column">
+              <p>Clínica Ochoa</p>
+              <a href="http://clinicaochoa.com.br" target="_blank" class="btn-primary">Acessar Site</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="next-project border-bottom py-4">
         <h1 class="gradient-text">
           Tell me about your <br />
           next project
@@ -161,7 +188,6 @@
   <!-- SCRIPTS -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
